# VoidGameBot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  Makefile  PUBLICREADME.md  README.md
lib/command_alias/: Cargo.toml
lib/command_alias/src/: lib.rs
lib/command_allplaying/: Cargo.toml
lib/command_allplaying/src/: lib.rs
lib/command_man/: Cargo.toml
lib/command_man/src/: lib.rs
lib/command_ping/: Cargo.toml
lib/command_ping/src/: lib.rs
lib/command_playing/: Cargo.toml
lib/command_playing/src/: lib.rs
lib/command_test/: Cargo.toml
lib/command_test/src/: lib.rs
lib/common_playing/: Cargo.toml
lib/common_playing/src/: lib.rs  managed_channel.rs
lib/common_void/: Cargo.toml
lib/common_void/src/: feature.rs  filter.rs  hook.rs  lib.rs  plugin.rs
src/: main.rs  platform.rs  plugin.rs
