[package]
name = "command_allplaying"
version = "0.1.0"
authors = ["Noah Shuart <shuart.noah@gmail.com>"]

[dependencies]
lazy_static = "1.0"
libloading = "0.4"

[dependencies.discord]
git = "https://github.com/TragicSolitude/discord-rs.git"

[dependencies.common_void]
path = "../common_void"

[lib]
crate-type = ["dylib"]